# Autonomus-sytheses

evolution-optimizer/: README.md  pyproject.toml
evolution-optimizer/src/: data_synthesis.py  diversification.py  hybrid_rf_ga_main.py  interface.py  main.py  objectives.py  plotting.py  plotting_hybrid.py
evolution-optimizer/src/models/: random_forest_feature_importance.py
evolution-optimizer/src/optimizers/: differential_evolution.py  genetic_algorithm.py  hybrid_ga.py
evolution-optimizer/src/problems/: sample_problem.py
evolution-optimizer/tests/: test_differential_evolution.py  test_genetic_algorithm.py
interface/: README.md  index.html  package.json  vite.config.ts
interface/src/: App.tsx  index.css
interface/src/components/: AnimatedBackground.tsx  FormulaSummary.tsx  Header.tsx  IngredientCard.tsx  IngredientList.tsx  MainContent.tsx  Sidebar.tsx  Signature.tsx  StatusBar.tsx  TopBar.tsx
interface/src/components/views/: DashboardView.tsx  DocumentsView.tsx  GenericView.tsx
interface/src/styles/: globals.css
